@@ -54,7 +54,7 @@ public class MainTVServerService implements UpnpIOParticipant, SamsungTvService 
     private static final String SERVICE_MAIN_AGENT = "MainTVAgent2";
     private static final List<String> SUPPORTED_CHANNELS = Arrays.asList(SOURCE_NAME, SOURCE_ID, BROWSER_URL,
             STOP_BROWSER);
-    private static final List<String> REFRESH_CHANNELS = Arrays.asList(CHANNEL, SOURCE_NAME, SOURCE_ID, PROGRAM_TITLE,
+    private static final List<String> REFRESH_CHANNELS = List.of(CHANNEL, SOURCE_NAME, SOURCE_ID, PROGRAM_TITLE,
             CHANNEL_NAME, BROWSER_URL);
     private static final List<String> SUBSCRIPTION_REFRESH_CHANNELS = Arrays.asList(SOURCE_NAME);
     protected static final int SUBSCRIPTION_DURATION = 1800;
